Made blog text more readable and fixed blog paths

--- a/assets/blog.css
+++ b/assets/blog.css
@@ -5,6 +5,10 @@
   position: relative;
 }
 
+.blog-post p {
+  line-height: 1.5;
+}
+
 @media only screen and (min-width: 600px) {
   .blog-post {
     width: 50%;
